src/test/ui/feature-gates/feature-gate-abi.stderr
error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:13:1
   |
LL | extern "rust-intrinsic" fn f1() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:15:1
   |
LL | extern "platform-intrinsic" fn f2() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:17:1
   |
LL | extern "vectorcall" fn f3() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:18:1
   |
LL | extern "rust-call" fn f4() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:19:1
   |
LL | extern "msp430-interrupt" fn f5() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:20:1
   |
LL | extern "ptx-kernel" fn f6() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:21:1
   |
LL | extern "x86-interrupt" fn f7() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:22:1
   |
LL | extern "thiscall" fn f8() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:23:1
   |
LL | extern "amdgpu-kernel" fn f9() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:24:1
   |
LL | extern "efiapi" fn f10() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:28:5
   |
LL |     extern "rust-intrinsic" fn m1();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:30:5
   |
LL |     extern "platform-intrinsic" fn m2();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:32:5
   |
LL |     extern "vectorcall" fn m3();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:33:5
   |
LL |     extern "rust-call" fn m4();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:34:5
   |
LL |     extern "msp430-interrupt" fn m5();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:35:5
   |
LL |     extern "ptx-kernel" fn m6();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:36:5
   |
LL |     extern "x86-interrupt" fn m7();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:37:5
   |
LL |     extern "thiscall" fn m8();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:38:5
   |
LL |     extern "amdgpu-kernel" fn m9();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:39:5
   |
LL |     extern "efiapi" fn m10();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:41:5
   |
LL |     extern "vectorcall" fn dm3() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:42:5
   |
LL |     extern "rust-call" fn dm4() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:43:5
   |
LL |     extern "msp430-interrupt" fn dm5() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:44:5
   |
LL |     extern "ptx-kernel" fn dm6() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:45:5
   |
LL |     extern "x86-interrupt" fn dm7() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:46:5
   |
LL |     extern "thiscall" fn dm8() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:47:5
   |
LL |     extern "amdgpu-kernel" fn dm9() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:48:5
   |
LL |     extern "efiapi" fn dm10() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:55:5
   |
LL |     extern "rust-intrinsic" fn m1() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:57:5
   |
LL |     extern "platform-intrinsic" fn m2() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:59:5
   |
LL |     extern "vectorcall" fn m3() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:60:5
   |
LL |     extern "rust-call" fn m4() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:61:5
   |
LL |     extern "msp430-interrupt" fn m5() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:62:5
   |
LL |     extern "ptx-kernel" fn m6() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:63:5
   |
LL |     extern "x86-interrupt" fn m7() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:64:5
   |
LL |     extern "thiscall" fn m8() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:65:5
   |
LL |     extern "amdgpu-kernel" fn m9() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:66:5
   |
LL |     extern "efiapi" fn m10() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:71:5
   |
LL |     extern "rust-intrinsic" fn im1() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:73:5
   |
LL |     extern "platform-intrinsic" fn im2() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:75:5
   |
LL |     extern "vectorcall" fn im3() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:76:5
   |
LL |     extern "rust-call" fn im4() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:77:5
   |
LL |     extern "msp430-interrupt" fn im5() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:78:5
   |
LL |     extern "ptx-kernel" fn im6() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:79:5
   |
LL |     extern "x86-interrupt" fn im7() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:80:5
   |
LL |     extern "thiscall" fn im8() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:81:5
   |
LL |     extern "amdgpu-kernel" fn im9() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:82:5
   |
LL |     extern "efiapi" fn im10() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:86:11
   |
LL | type A1 = extern "rust-intrinsic" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:87:11
   |
LL | type A2 = extern "platform-intrinsic" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:88:11
   |
LL | type A3 = extern "vectorcall" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:89:11
   |
LL | type A4 = extern "rust-call" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:90:11
   |
LL | type A5 = extern "msp430-interrupt" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:91:11
   |
LL | type A6 = extern "ptx-kernel" fn ();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:92:11
   |
LL | type A7 = extern "x86-interrupt" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:93:11
   |
LL | type A8 = extern "thiscall" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:94:11
   |
LL | type A9 = extern "amdgpu-kernel" fn();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:95:12
   |
LL | type A10 = extern "efiapi" fn();
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:98:1
   |
LL | extern "rust-intrinsic" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:99:1
   |
LL | extern "platform-intrinsic" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: vectorcall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:100:1
   |
LL | extern "vectorcall" {}
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:101:1
   |
LL | extern "rust-call" {}
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:102:1
   |
LL | extern "msp430-interrupt" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38487
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable

error[E0658]: PTX ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi.rs:103:1
   |
LL | extern "ptx-kernel" {}
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/38788
   = help: add `#![feature(abi_ptx)]` to the crate attributes to enable

error[E0658]: x86-interrupt ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:104:1
   |
LL | extern "x86-interrupt" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/40180
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:105:1
   |
LL | extern "thiscall" {}
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: amdgpu-kernel ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:106:1
   |
LL | extern "amdgpu-kernel" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51575
   = help: add `#![feature(abi_amdgpu_kernel)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:107:1
   |
LL | extern "efiapi" {}
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/65815
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:28:32
   |
LL |     extern "rust-intrinsic" fn m1();
   |                                ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:30:36
   |
LL |     extern "platform-intrinsic" fn m2();
   |                                    ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:13:33
   |
LL | extern "rust-intrinsic" fn f1() {}
   |                                 ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:15:37
   |
LL | extern "platform-intrinsic" fn f2() {}
   |                                     ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:55:37
   |
LL |     extern "rust-intrinsic" fn m1() {}
   |                                     ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:57:41
   |
LL |     extern "platform-intrinsic" fn m2() {}
   |                                         ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:71:38
   |
LL |     extern "rust-intrinsic" fn im1() {}
   |                                      ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:73:42
   |
LL |     extern "platform-intrinsic" fn im2() {}
   |                                          ^^

error: aborting due to 76 previous errors

For more information about this error, try `rustc --explain E0658`.
